[gd_scene load_steps=4 format=2]

[ext_resource path="res://fuentes/Barlow-Black.otf" type="DynamicFontData" id=1]
[ext_resource path="res://script/Cargar.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[node name="Cargar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.690196, 0.490196, 1 )

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 327.0
margin_top = 489.0
margin_right = 1597.0
margin_bottom = 614.0

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 784.0
margin_top = 340.0
margin_right = 1154.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 1 )
text = "CARGANDO"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 499.0
margin_top = 390.0
margin_right = 637.0
margin_bottom = 464.0
text = "hdgfhgffhfghgfhgf"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.09

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
